# wordfreq

./: CMakeLists.txt  Makefile  README.md  Readme.txt  Sample.txt  Sample2.txt  ciLess.h  conanfile.txt  fileReader.cpp  fileReader.h  main.cpp  main.h  test.sh  wordfreq-multiproc.sh  wordfreq.sh
src/: CMakeLists.txt  ci_less.h  file_reader.cpp  file_reader.h  myException.h  queue.h  types.h  wordfreq.cpp
